--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-231.1KB/s(Youtube:不良林), server: 38.121.43.71, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-252.5KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇺🇸 美国-293.5KB/s(Youtube:不良林), server: 38.64.138.145, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-271.0KB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: 38.68.134.85, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 38.114.114.67, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-704.4KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-664.3KB/s(Youtube:不良林), server: 85.208.108.58, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.143.66.99, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-873.2KB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 04eb6d9d-f6b8-4f6a-92e7-b336b2168b26, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
   - {name: 🇺🇸 美国-744.6KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-989.2KB/s(Youtube:不良林), server: 38.64.138.145, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-271.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
