--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 38.114.114.67, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-704.4KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-664.3KB/s(Youtube:不良林), server: 85.208.108.58, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.143.66.99, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-873.2KB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 04eb6d9d-f6b8-4f6a-92e7-b336b2168b26, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
+  - {name: 🇺🇸 美国-887.3KB/s(Youtube:不良林), server: 38.121.43.71, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-346.4KB/s(Youtube:不良林), server: 38.86.135.27, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 38.68.135.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-744.6KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-989.2KB/s(Youtube:不良林), server: 38.64.138.145, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-446.9KB/s(Youtube:不良林), server: 38.68.135.19, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-253.6KB/s(Youtube:不良林), server: 38.114.114.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-617.8KB/s(Youtube:不良林), server: 38.114.114.19, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-250.3KB/s(Youtube:不良林), server: 38.64.138.145, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇷🇺 俄罗斯联邦-544.3KB/s(Youtube:不良林), server: 213.183.53.179, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 保加利亚-259.0KB/s(Youtube:不良林), server: 213.183.63.218, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林), server: 213.183.53.222, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林), server: 213.183.53.221, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.3KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.3KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.3KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.3KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.3KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.3KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-704.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-366.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-887.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-744.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-989.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-446.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-617.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.3KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
