--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林), server: 213.183.53.222, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
   - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.75.136.21, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-809.0KB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-605.7KB/s(Youtube:不良林), server: 38.114.114.67, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-293.5KB/s(Youtube:不良林), server: 38.64.138.145, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-593.4KB/s(Youtube:不良林), server: 38.68.135.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林), server: 213.183.53.222, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林), server: 213.183.53.221, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 保加利亚-266.0KB/s(Youtube:不良林), server: 213.183.63.218, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林), server: 213.183.53.207, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇷🇺 俄罗斯联邦-271.5KB/s(Youtube:不良林), server: 213.183.53.221, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇫🇷 法国-257.9KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 保加利亚-259.0KB/s(Youtube:不良林), server: 213.183.63.218, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇨🇦 加拿大-823.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-809.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
-      - 保加利亚-266.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-809.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
-      - 保加利亚-266.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-809.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
-      - 保加利亚-266.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-809.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
-      - 保加利亚-266.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-809.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
-      - 保加利亚-266.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-809.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
-      - 保加利亚-266.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-809.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-605.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-593.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-669.5KB/s(Youtube:不良林)
-      - 保加利亚-266.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-271.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
