--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林), server: 213.183.53.222, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.75.136.21, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇫🇷 法国-257.9KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 保加利亚-259.0KB/s(Youtube:不良林), server: 213.183.63.218, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇯🇵 日本-1.12MB/s(Youtube:不良林), server: 85.208.108.58, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-311.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-455.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-301.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-823.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-440.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-532.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-373.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-734.5KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-337.0KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-318.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-257.9KB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-823.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-734.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
